--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="img/carrossel/bri3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="aumentar_letra">Segunda Temporada</h5>
-              <p class="aumentar_letra">Anthony escolhe uma esposa e lida com traumas do passado</p>
+              <p class="aumentar_letra">Anthony escolhe uma esposa e lida com muitos traumas passados</p>
             </div>
           </div>
           <div class="carousel-item">
