--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/carrossel/bri1.png" class="d-block w-100" alt="...">
+            <img src="img/carrosel/pqn principe4" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/carrossel/bri2.jpg" class="d-block w-100" alt="...">
+            <img src="img/carrosel/pqn principe" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="sombra aumentar_letra">Primeira Temporada</h5>
               <p class="sombra aumentar_letra">Conta a História de Daphne e Simon Hastings</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/carrossel/bri3.jpg" class="d-block w-100" alt="...">
+            <img src="img/carrosel/pqn principe2" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="aumentar_letra">Segunda Temporada</h5>
               <p class="aumentar_letra">Anthony escolhe uma esposa e lida com muitos traumas passados</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="img/carrossel/bri5.jpg" class="d-block w-100" alt="...">
+            <img src="img/carrosel/pqn principe3" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="sombra2 aumentar_letra">Rainha Charlotte</h5>
               <p class="sombra2 aumentar_letra">Destaque para o relacionamento dela com o Rei George III e sobre sua enfermidade</p>
