--- a/index.html
+++ b/index.html
@@ -55,34 +55,30 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/carrosel/pqn principe4" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/carrosel/pqn principe3" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/carrosel/pqn principe2" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/carrosel/pqn principe4" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="img/carrosel/pqn principe" class="d-block w-100" alt="...">
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="img/carrosel/pqn principe" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="sombra aumentar_letra">Primeira Temporada</h5>
-              <p class="sombra aumentar_letra">Conta a História de Daphne e Simon Hastings</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/carrosel/pqn principe2" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="aumentar_letra">Segunda Temporada</h5>
-              <p class="aumentar_letra">Anthony escolhe uma esposa e lida com muitos traumas passados</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="img/carrosel/pqn principe3" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="sombra2 aumentar_letra">Rainha Charlotte</h5>
-              <p class="sombra2 aumentar_letra">Destaque para o relacionamento dela com o Rei George III e sobre sua enfermidade</p>
-            </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
