--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Frozen</a>
+          <a class="navbar-brand" href="#">O Pequeno Príncipe</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#filmes">Filmes</a>
+                <a class="nav-link" href="#filmes">Filme</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#musicas">Músicas</a>
@@ -43,47 +43,50 @@
       </nav>
     </header>
    
-      <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        </div>
-        <div id="carouselExample" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/carrosel/pqn principe3" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/carrosel/pqn principe2" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/carrosel/pqn principe4" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="img/carrosel/pqn principe" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/carrosel/pqn principe" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>O Pequeno Príncipe</h5>
+            <p>Elsa</p>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="carousel-item">
+          <img src="img/carrosel/pqn principe2" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>O Pequeno Príncipe</h5>
+            <p>Cenário da floresta congelada</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/carrosel/pqn principe3" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>O Pequeno Príncipe</h5>
+            <p>Elsa e Anna</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/carrosel/pqn principe4" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>O Pequeno Príncipe</h5>
+            <p>Elsa e Anna crianças</p>
+          </div>
+        </div>
+       
+        </div>
       </div>
-   
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
    
